# deja

./: .gitignore  CMakeLists.txt  buffer.h  helpers.h  ignition.c  ignition.h  main.c  multicore_main.c  notes.md  scheduler.c  scheduler.h  screen.c  screen.h  screen_test.c  state.c  state.h  timing.c  timing.h  trigger.c  trigger.h
